Working user and api fixes
