# src/main/java/com/example/ism/UserController.java
@@ -2,20 +2,44 @@ package com.example.ism;
 
 import com.example.api.UserApi;
 import com.example.model.User;
+import com.example.model.Volunteer;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 
 @RestController
 public class UserController implements UserApi {
 
+    private final List<User> users = new ArrayList<>();
+
+    @Override
+    public ResponseEntity<List<User>> getUsers() {
+        return ResponseEntity.of(Optional.of(users));
+    }
+
     @Override
     public ResponseEntity<User> createUser(User user) {
-        return UserApi.super.createUser(user);
+        users.add(user);
+        return ResponseEntity.ok(user);
     }
 
     @Override
     public ResponseEntity<Void> deleteUser(Integer id) {
-        return UserApi.super.deleteUser(id);
+        Optional<User> result = users.stream().findFirst().filter(
+                user -> Math.toIntExact(user.getId()) == id
+        );
+
+        if (result.isEmpty())
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+
+        User toDelete = result.get();
+        users.remove(toDelete);
+
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
@@ -29,7 +53,18 @@ public class UserController implements UserApi {
     }
 
     @Override
-    public ResponseEntity<Void> updateUser(String id, User user) {
-        return UserApi.super.updateUser(id, user);
+    public ResponseEntity<Void> updateUser(Integer id, User user) {
+
+        Optional<User> suspect = users.stream().findFirst().filter(user1 -> Math.toIntExact(user1.getId()) == id);
+
+        if (suspect.isEmpty()) return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+
+        User userToUpdate = suspect.get();
+
+        userToUpdate.setEmail(user.getEmail());
+        userToUpdate.setPassword(user.getPassword());
+        userToUpdate.setPhoneNumber(user.getPhoneNumber());
+
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 }
